--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
   border: 0;
   padding: 0;
   box-sizing: border-box;
-  z-index: 10;
+  text-decoration: none;
+  color: #333;
 }
 
 html {
@@ -83,4 +84,7 @@ html {
     max-width: 130rem;
     padding: 0;
   }
+}
+.hidden {
+  display: none;
 }
