--- a/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
+++ b/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
@@ -6,3 +6,12 @@
   gap: 0.5rem;
   align-items: center;
 }
+.header__main__page__mobi__box--img {
+  width: 2.4rem;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  overflow: hidden;
+}
