--- a/src/Header/Header PC/Header PC Min-width 1000px.css
+++ b/src/Header/Header PC/Header PC Min-width 1000px.css
@@ -52,6 +52,7 @@
     opacity: 0;
     transform-origin: left top;
     cursor: default;
+    z-index: 12;
   }
   .header__pc__main__page__navigation__info--title:hover
     > .header__pc__main__page__navigation__info__title--dropdown {
@@ -289,5 +290,13 @@
   }
   .header__pc__main__page__box--search {
     flex: 1;
+    width: 2rem;
+  }
+  .header__pc__main__page__box__search--last {
+    display: flex;
+    gap: 1rem;
+    margin: .5rem 0;
+    color: #fff;
+    font-size: 1.2rem;
   }
 }
