--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,8 @@
   box-sizing: border-box;
   text-decoration: none;
   color: #333;
+  --webkit-tap-highlight-color: rgba(0, 0, 0,0);
+  -webkit-tap-highlight-color: transparent;
 }
 
 html {
