changes api banner

--- a/src/MainPage/Banner/Banner Min-width 1000px.css
+++ b/src/MainPage/Banner/Banner Min-width 1000px.css
@@ -13,7 +13,7 @@
   }
   .banner__main__page__box--banner {
     display: flex;
-    overflow: hidden;
+    overflow: auto;
     width: 100%;
     overflow-x: auto;
     scroll-snap-type: x mandatory;
