--- a/src/MainPage/Banner/Banner Min-width 1000px.css
+++ b/src/MainPage/Banner/Banner Min-width 1000px.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 1000px) {
   #banner__main__page {
     margin-top: 2rem;
+    display: block;
   }
   .banner__main__page--layout {
     display: flex;
@@ -18,7 +19,6 @@
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     height: 100%;
-    
   }
   .banner__main__page__box--banner::-webkit-scrollbar {
     display: none;
@@ -32,13 +32,12 @@
     -ms-transition: all 0.3s linear;
     -o-transition: all 0.3s linear;
     height: 100%;
-
   }
   .banner__main__page__box__banner--img {
     flex: 0 0 100%;
     display: block;
     scroll-snap-align: center;
-    width: 500px;
+    width: 100%;
   }
   .banner__main__page__box--arrow {
     display: flex;
@@ -48,21 +47,21 @@
     left: 0;
     top: 50%;
     width: 100%;
-    cursor: pointer;
     opacity: 0;
-    transition: all 0.3s linear;
-    -webkit-transition: all 0.3s linear;
-    -moz-transition: all 0.3s linear;
-    -ms-transition: all 0.3s linear;
-    -o-transition: all 0.3s linear;
     transform: translateY(-50%);
     -webkit-transform: translateY(-50%);
     -moz-transform: translateY(-50%);
     -ms-transform: translateY(-50%);
     -o-transform: translateY(-50%);
-}
+    transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+  }
   .banner__main__page__box__arrow--left,
   .banner__main__page__box__arrow--right {
+    cursor: pointer;
     width: 4rem;
     fill: #fff;
     padding: 1rem;
@@ -110,5 +109,16 @@
   }
   .banner__main__page__box__dots--item.banner__main__page__box__dots__item--active {
     background: #ee4d2d;
+  }
+  .banner__main__page__box--frame-side-event {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: .5rem;
+  }
+  .banner__main__page__box__frame_side_event--img {
+    height: 100%;
+    flex: 1;
   }
 }
