--- a/src/MainPage/CATEGORIES/Categories Min-width 1000px.css
+++ b/src/MainPage/CATEGORIES/Categories Min-width 1000px.css
@@ -1,6 +1,7 @@
 @media screen and (min-width: 1000px) {
   #categories__main__page {
     background: #f5f5f5;
+    display: block;
   }
   .categories__main__page--layout {
       background: #fff;
