--- a/src/MainPage/Flash sale/Count Down Time/Count Down Time Max-width 600px.css
+++ b/src/MainPage/Flash sale/Count Down Time/Count Down Time Max-width 600px.css
@@ -37,7 +37,11 @@
     background: #000;
     overflow: scroll;
     scrollbar-width: none;
-  
+    transition: all 1s ease-in-out;
+    -webkit-transition: all 1s ease-in-out;
+    -moz-transition: all 1s ease-in-out;
+    -ms-transition: all 1s ease-in-out;
+    -o-transition: all 1s ease-in-out;
 }
 
 .flash__sale__time__seconds__seccond--number,
