--- a/src/MainPage/Shopee small/Shopee Small Items/Shopee Small Items Min-width 1000px.css
+++ b/src/MainPage/Shopee small/Shopee Small Items/Shopee Small Items Min-width 1000px.css
@@ -1,6 +1,57 @@
-
-@media screen and (min-width: 1000px){
-    .shopee__small__body--frame {
-        flex: 2;
-    }
+@media screen and (min-width: 1000px) {
+  .shopee__small__body--frame {
+    flex: 5;
+    width: 0;
+    position: relative;
+  }
+  .shopee__small__body__frame--items {
+    display: block;
+    margin-top: 0;
+  }
+  .shopee__small__body__box--items--more {
+    box-shadow: 0 0 0 transparent;
+  }
+  .shopee__small__body__frame--arrow--left,
+  .shopee__small__body__frame--arrow--right {
+    display: block !important;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+    padding: 0.6rem;
+    background-color: #ffff;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    box-shadow: inset 0 0 0.1rem gray;
+    scale: 0.9;
+    transition: all 0.3s linear;
+    -webkit-transition: all 0.3s linear;
+    -moz-transition: all 0.3s linear;
+    -ms-transition: all 0.3s linear;
+    -o-transition: all 0.3s linear;
+    transform-origin: center;
+    opacity: 0;
+  }
+  .shopee__small__body__frame--arrow--left {
+    left: -1.5rem;
+  }
+  .shopee__small__body__frame--arrow--right {
+    right: -1.5rem;
+  }
+  .shopee__small__body--frame:hover > .shopee__small__body__frame--arrow--left,
+  .shopee__small__body--frame:hover
+    > .shopee__small__body__frame--arrow--right {
+    scale: 1.3;
+  }
+  .shopee__small__body__frame--arrow--left.shopee__small__body__frame__arrow--active,
+  .shopee__small__body__frame--arrow--right.shopee__small__body__frame__arrow--active {
+    opacity: 1;
+    cursor: pointer;
+  }
 }
