--- a/src/MainPage/Shopee small/Shopee Small Items/Hanle Render Items/Render Items  Shopee Small Max-width 600px.css
+++ b/src/MainPage/Shopee small/Shopee Small Items/Hanle Render Items/Render Items  Shopee Small Max-width 600px.css
@@ -2,7 +2,7 @@
   box-shadow: inset 0 0 0.1rem gray;
   padding-top: 18rem;
   position: relative;
-  min-width: 21.6rem;
+  min-width: calc(100% / 4);
 }
 .shopee__small__body__box__items--img {
   position: absolute;
