--- a/src/MainPage/Shopee small/Shopee Small Items/Shopee Small Items Max-width 600px.css
+++ b/src/MainPage/Shopee small/Shopee Small Items/Shopee Small Items Max-width 600px.css
@@ -15,7 +15,7 @@
   gap: 0.5rem;
 }
 .shopee__small__body__box--items--more {
-  min-width: 21.6rem;
+  min-width: calc(100% / 4);
   display: flex;
   gap: 0.3rem;
   justify-content: center;
