done daily discover

--- a/src/MainPage/Shopee small/Banner Shopee Small Mainpage/Banner Shopee Small Mainpage Max-width 600px.css
+++ b/src/MainPage/Shopee small/Banner Shopee Small Mainpage/Banner Shopee Small Mainpage Max-width 600px.css
@@ -1,7 +1,7 @@
 
 
 .shopee__small__body--banner{
-    
+    transform: rotateY(347deg);
     position: relative;
 }
 .shopee__small__body__banner--img{
