--- a/src/MainPage/Shopee small/Shopee Small Items/Hanle Render Items/Render Items  Shopee Small Min-width 1000px.css
+++ b/src/MainPage/Shopee small/Shopee Small Items/Hanle Render Items/Render Items  Shopee Small Min-width 1000px.css
@@ -1,7 +1,9 @@
 @media screen and (min-width: 1000px) {
-    .shopee__small__body__box--items{
-        box-shadow: inset 0 0  0 gray;
-        
-    }
-  
+  .shopee__small__body__frame--items{
+    padding-bottom: 2rem;
+  }
+  .shopee__small__body__box--items {
+    box-shadow: inset 0 0 0 gray;
+    min-width: calc(100% / 4);  
+  }
 }
