--- a/src/Library Banner/Banner Shopee Min-width 1000px.css
+++ b/src/Library Banner/Banner Shopee Min-width 1000px.css
@@ -1,12 +1,13 @@
 @media screen and (min-width: 1000px) {
-  .shopee__small__body--banner {
-    flex: 3.5;
+  .shopee__banner__body--banner {
+   width: 100%;
+   height: 100%;
   }
-.shopee__small__body__banner--img{
+.shopee__banner__body__banner--img{
   height: 100%;
 }
-  .shopee__small__body__banner--arrow--right,
-  .shopee__small__body__banner--arrow--left {
+  .shopee__banner__body__banner--arrow--right,
+  .shopee__banner__body__banner--arrow--left {
     display: block;
     position: absolute;
     top: 50%;
@@ -30,16 +31,16 @@
     -o-transition: all 0.3s ease-in-out;
     cursor: pointer;
   }
-  .shopee__small__body__banner--arrow--right {
+  .shopee__banner__body__banner--arrow--right {
     right: 0;
   }
-  .shopee__small__body__banner--arrow--left {
+  .shopee__banner__body__banner--arrow--left {
     left: 0;
   }
-  .shopee__small__body--banner:hover
-    > .shopee__small__body__banner--arrow--right,
-  .shopee__small__body--banner:hover
-    > .shopee__small__body__banner--arrow--left {
+  .shopee__banner__body--banner:hover
+    > .shopee__banner__body__banner--arrow--right,
+  .shopee__banner__body--banner:hover
+    > .shopee__banner__body__banner--arrow--left {
     opacity: 1;
   }
 }
