--- a/src/MainPage/Flash sale/Items Flash sale MainPage/Items Flash sale MainPage Max-width 600px.css
+++ b/src/MainPage/Flash sale/Items Flash sale MainPage/Items Flash sale MainPage Max-width 600px.css
@@ -7,7 +7,7 @@
   gap: 1rem;
 }
 .flash__sale__body--items {
-    width: 17rem;
+  width: 17rem;
 }
 .flash__sale__body__items--img {
   position: relative;
@@ -87,5 +87,18 @@
 }
 .flash__sale__body--arrow--left,
 .flash__sale__body--arrow--right {
-    display: none;
+  display: none;
+}
+.flash__sale__body__items__sell--sold {
+  text-align: center;
+  position: absolute;
+  width: 100%;
+  background: #ed2915;
+}
+.flash__sale__body__items__sell__sold--title {
+  color: #fff;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  z-index: 3;
+
 }
