make result search

--- a/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
+++ b/src/Header/Header  Mobi/Header  Main Page Mobi Max-width 600px.css
@@ -27,6 +27,7 @@
 }
 .header__main__page__mobi--box--cpm--search {
   flex: 3;
+  background: #fff;
 }
 .header__main__page__mobi--box--info {
   flex: 1;
