--- a/src/Header/Header result search mobi/Header Result Search Mobi Max-width 600px.css
+++ b/src/Header/Header result search mobi/Header Result Search Mobi Max-width 600px.css
@@ -1,5 +1,7 @@
+
 .header__result__search__mobi--layout {
-    position: relative;
+  position: relative;
+  padding: .5rem;
 }
 .header__result__search__mobi--header {
   display: flex;
@@ -71,35 +73,35 @@
   position: absolute;
   width: calc(100% / 4);
   background: #ee4d2d;
-  height: .2rem;
+  height: 0.2rem;
   bottom: 0;
   left: 0;
-  transition: all .3s ease-in-out;
-  -webkit-transition: all .3s ease-in-out;
-  -moz-transition: all .3s ease-in-out;
-  -ms-transition: all .3s ease-in-out;
-  -o-transition: all .3s ease-in-out;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
 }
 
 .header__result__search__mobi--footer {
-    display: flex;
-    align-items: center;
-    overflow-x: auto;
-    gap: 1rem;
-    padding: 1rem 0.5rem;
+  display: flex;
+  align-items: center;
+  overflow-x: auto;
+  gap: 1rem;
+  padding: 1rem 0.5rem;
 }
 .header__result__search__mobi__footer--options {
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    padding: 1rem;
-    background: #f5f5f5;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  padding: 1rem;
+  background: #f5f5f5;
 }
 .header__result__search__mobi__footer__options--title {
-    text-wrap: nowrap;
-    font-size: 1.2rem;
+  text-wrap: nowrap;
+  font-size: 1.2rem;
 }
 .header__result__search__mobi__footer__options--icon {
-    width: 1.2rem;
-    height: 1.2rem;
+  width: 1.2rem;
+  height: 1.2rem;
 }
