--- a/src/Result Search Items Page/Relate Shop/Relate Shop Max-witdh 400px.css
+++ b/src/Result Search Items Page/Relate Shop/Relate Shop Max-witdh 400px.css
@@ -2,6 +2,8 @@
 
 }
 .relate__shop__sesult__search__items--layout {
+  padding: 0;
+  margin-bottom: 2rem;
 }
 .relate__shop__sesult__search__items--header {
   display: none;
@@ -160,4 +162,9 @@
 .relate__shop__sesult__search__items__footer__items--price {
   text-align: center;
   font-size: 1rem;
+}
+.result__search__items__page__items__need__search__body--items {
+  display: grid;
+  grid-template-columns: repeat(1,1fr);
+  gap: 1rem;
 }
