--- a/src/Result Search Items Page/Result Search Items Page Max-width 600px.css
+++ b/src/Result Search Items Page/Result Search Items Page Max-width 600px.css
@@ -6,3 +6,6 @@
 .result__search__items__page--filter {
     display: none;
 }
+.result__search__items__page__items__need__search__body--items {
+    grid-template-columns: repeat(2,1fr);
+}
